tests/baselines/reference/thisInInvalidContextsExternalModule.types
=== tests/cases/conformance/expressions/thisKeyword/thisInInvalidContextsExternalModule.ts ===
//'this' in static member initializer
class ErrClass1 {
>ErrClass1 : ErrClass1

    static t = this; // Error
>t : 类为 ErrClass1
>this : 类为 ErrClass1
}

class BaseErrClass {
>BaseErrClass : BaseErrClass

    constructor(t: any) { }
>t : 任意
>类型别名 :=> 任意
}

class ClassWithNoInitializer extends BaseErrClass {
>ClassWithNoInitializer : ClassWithNoInitializer
>BaseErrClass : BaseErrClass

    t;
>t : 任意
>类型别名 :=> 任意

    //'this' in optional super call
    constructor() {
        super(this); // error: "super" has to be called before "this" accessing
>super(this) : 无值
>类型别名 :=> 无值
>super : 类为 BaseErrClass
>this : 本体
    }
}

class ClassWithInitializer extends BaseErrClass {
>ClassWithInitializer : ClassWithInitializer
>BaseErrClass : BaseErrClass

    t = 4;
>t : 数字
>类型别名 :=> 数字
>4 : 4

    //'this' in required super call
    constructor() {
        super(this); // Error
>super(this) : 无值
>类型别名 :=> 无值
>super : 类为 BaseErrClass
>this : 本体
    }
}

module M {
>M : 类为 M

    //'this' in module variable
    var x = this; // Error
>x : 任意
>类型别名 :=> 任意
>this : 任意
>类型别名 :=> 任意
}

//'this' as type parameter constraint
// function fn<T extends this >() { } // Error

//'this' as a type argument
function genericFunc<T>(x: T) { }
>genericFunc : <T>(x: T) => 无值
>T : T
>x : T
>T : T

genericFunc<this>(undefined);  // Should be an error
>genericFunc<this>(undefined) : 无值
>类型别名 :=> 无值
>genericFunc : <T>(x: T) => 无值
>undefined : 未定
>类型别名 :=> 未定

class ErrClass3 extends this {
>ErrClass3 : ErrClass3
>this : 任意
>类型别名 :=> 任意

}

//'this' as a computed enum value
enum SomeEnum {
>SomeEnum : SomeEnum

    A = this, // Should not be allowed
>A : SomeEnum
>this : 任意
>类型别名 :=> 任意

    B = this.spaaaace // Also should not be allowed
>B : SomeEnum
>this.spaaaace : 任意
>类型别名 :=> 任意
>this : 任意
>类型别名 :=> 任意
>spaaaace : 任意
>类型别名 :=> 任意
}

export = this; // Should be an error
